# marketplace

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  Makefile  NPM_PUBLISHING_QUICK_START.md  PUBLISH_TO_NPM_COMMANDS.md  QUICK_PUBLISH.sh  README.md  SWARM_IMPLEMENTATION_COMPLETE.md  docker-compose.yml  package-lock.json  package.json  publish.sh  tsconfig.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci-cd-pipeline.yaml  ci-cd.yml  e2e-tests.yml  npm-publish.yml  performance-tests.yml  pr-validation.yml
chaos-engineering/: DESIGN.md  README.md
chaos-engineering/application/: cache-chaos.yaml  database-chaos.yaml
chaos-engineering/ci-cd/: github-actions-chaos.yaml
chaos-engineering/monitoring/: grafana-chaos-dashboard.json  prometheus-chaos-rules.yaml
chaos-engineering/playbooks/: RUNBOOK.md
chaos-engineering/scripts/: validate-slo.sh
config/development/: config.json
config/production/: config.json
config/staging/: config.json
crates/llm-infra/: Cargo.toml
crates/llm-infra/src/: config.rs  errors.rs  lib.rs  logging.rs  retry.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  COORDINATION_SUMMARY.md  FOUNDATION_SETUP_REPORT.md  IMPLEMENTATION_REPORT.md  INFRASTRUCTURE_REPORT.md  INFRASTRUCTURE_STATUS.md  NPM_PUBLISHING_GUIDE.md  PHASE_2B_INFRA_INTEGRATION_SUMMARY.md  PROJECT_INDEX.md  PUBLISHING_SERVICE_IMPLEMENTATION_REPORT.md  PUBLISHING_SERVICE_REPORT.md  PUBLISHING_SERVICE_SUMMARY.md  SECURITY.md  SPARC_INDEX.md  SPARC_METHODOLOGY.md  SPARC_QUICK_REFERENCE.md  SPARC_VISUAL_WORKFLOWS.md  api-reference.md  data-model.md  deployment-guide.md
docs/api/: README.md
docs/architecture/: README.md
docs/disaster-recovery/: DISASTER_RECOVERY_PLAN.md  README.md
docs/runbooks/: INCIDENT_RESPONSE_FRAMEWORK.md  README.md
infrastructure/: README.md
infrastructure/prometheus/: prometheus.yml
infrastructure/sql/: init.sql
infrastructure/terraform/: main.tf  modules.tf  variables.tf
marketplace-benchmarks/: .gitignore  Cargo.toml  README.md  TYPESCRIPT_RUST_BRIDGE_IMPLEMENTATION.md
marketplace-benchmarks/benchmarks/output/raw/: .gitkeep
marketplace-benchmarks/src/: lib.rs
marketplace-benchmarks/src/adapters/: README.md  listing_retrieval.rs  metadata_validation.rs  mod.rs  registry_lookup.rs  search_queries.rs
marketplace-benchmarks/src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
marketplace-benchmarks/ts-wrappers/: README.md  listing-cli.ts  package.json  registry-cli.ts  search-cli.ts  tsconfig.json  validation-cli.ts
plans/: EXECUTIVE_SUMMARY.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  SPARC-IMPLEMENTATION-ROADMAP.md  SPARC_COORDINATION_REPORT.md  SPARC_Specification.md  TECHNICAL_IMPLEMENTATION_GUIDE.md
scripts/: check-packages.sh  publish-local.sh  release.sh
scripts/backup/: disaster-recovery.sh  postgres-backup.sh
scripts/deployment/: blue-green-deploy.sh  canary-deploy.sh  rollback.sh
sdks/: SDK_DESIGN.md
sdks/javascript/: .npmignore  README.md  package.json
services/admin/: .env.example  .gitignore  API.md  Dockerfile  IMPLEMENTATION_REPORT.md  Makefile  README.md  auth.py  config.py  database.py  main.py  models.py  pytest.ini  requirements.txt  schemas.py  setup.sh
services/consumption/: .env.example  CONSUMPTION_SERVICE_IMPLEMENTATION_REPORT.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_NOTES.md  Makefile  PERFORMANCE_REPORT.md  QUICKSTART.md  README.md  docker-compose.yml  prometheus.yml
services/consumption/benches/: consumption_bench.rs
services/consumption/migrations/: 001_init.sql  002_sla_violations.sql
services/consumption/src/: main.rs
services/consumption/src/handlers/: api_keys.rs  consumption.rs  consumption_enhanced.rs  mod.rs  quota.rs  usage.rs
services/consumption/src/middleware/: auth.rs  metrics.rs  mod.rs  tracing.rs
services/consumption/src/models/: mod.rs
services/consumption/src/services/: analytics_streamer.rs  api_key_manager.rs  mod.rs  policy_client.rs  policy_engine_client.rs  quota_manager.rs  rate_limiter.rs  registry_client.rs  request_router.rs  shield_client.rs  sla_monitor.rs  usage_meter.rs
services/consumption/src/utils/: errors.rs  mod.rs
services/consumption/tests/: integration_test.rs
services/discovery/: .env.example  BUILD_SUMMARY.txt  DELIVERY_REPORT.md  Dockerfile  ENGINEER_DELIVERY_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_REPORT.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  config.yaml  docker-compose.yml  go.mod  go.sum  prometheus.yml
services/graphql-gateway/: .env.example  .eslintrc.js  .gitignore  .npmignore  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
services/ml-recommendations/: DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
services/ml-recommendations/k8s/: deployment.yaml
services/ml-recommendations/src/ml_recommendations/ab_testing/: __init__.py  ab_test_manager.py
services/ml-recommendations/src/ml_recommendations/algorithms/: collaborative_filtering.py  hybrid.py  neural_cf.py
services/ml-recommendations/src/ml_recommendations/api/: dependencies.py  main.py
services/ml-recommendations/src/ml_recommendations/core/: __init__.py  recommender_service.py
services/ml-recommendations/src/ml_recommendations/features/: feature_engineering.py  feature_store.py
services/ml-recommendations/src/ml_recommendations/models/: data_models.py
services/ml-recommendations/src/ml_recommendations/monitoring/: __init__.py  health.py  metrics.py
services/ml-recommendations/src/ml_recommendations/training/: __init__.py  evaluation.py  pipeline.py
services/ml-recommendations/tests/: test_algorithms.py  test_recommender_service.py
services/model-marketplace/: .npmignore  DESIGN.md  README.md  package.json
services/policy-engine/: .env.example  .gitignore  Dockerfile  Makefile  go.mod  (+5 more)
(+218 files in other folders)
