[package]
name = "marketplace-benchmarks"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Comprehensive benchmarking framework for LLM Marketplace"
license.workspace = true

[dependencies]
# LLM-Dev-Ops Infra (Phase 2B - shared infrastructure)
llm-infra = { workspace = true, features = ["config", "logging", "errors"] }

# LLM-Dev-Ops upstream dependencies (Phase 2A - compile-time only)
llm-registry-core.workspace = true
llm-shield-core.workspace = true
llm-policy-engine.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap = { version = "4.5", features = ["derive"] }

# System info
hostname = "0.4"
num_cpus = "1.16"
sys-info = "0.9"

# Logging (using infra, but keep env_logger for CLI)
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bin]]
name = "run_benchmarks"
path = "src/bin/run_benchmarks.rs"

[lib]
name = "marketplace_benchmarks"
path = "src/lib.rs"
