[package]
name = "consumption"
version = "1.0.0"
edition = "2021"
authors = ["LLM Marketplace Team"]
description = "Consumption service for LLM Marketplace - high-performance request routing and metering"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"

# LLM-Dev-Ops upstream dependencies (Phase 2A - compile-time only)
llm-registry-core = { git = "https://github.com/LLM-Dev-Ops/registry", branch = "main" }
llm-shield-core = { git = "https://github.com/LLM-Dev-Ops/shield", branch = "main" }
llm-policy-engine = { git = "https://github.com/LLM-Dev-Ops/policy-engine", branch = "main" }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
