[package]
name = "consumption"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
description = "Consumption service for LLM Marketplace - high-performance request routing and metering"

[dependencies]
# LLM-Dev-Ops Infra (Phase 2B - shared infrastructure)
llm-infra = { workspace = true, features = ["full"] }

# LLM-Dev-Ops upstream dependencies (Phase 2A - compile-time only)
llm-registry-core.workspace = true
llm-shield-core.workspace = true
llm-policy-engine.workspace = true

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }
hyper = { version = "1.1", features = ["full"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Redis (using workspace version)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Configuration
dotenvy.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-jaeger.workspace = true
prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async utilities
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
mockito.workspace = true
tokio-test.workspace = true
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
